chore: SEO 메타 및 sitemap/robots 추가

--- a/index.html
+++ b/index.html
@@ -2,9 +2,48 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JSON Formatter</title>
+    <title>JSON Formatter | JSON Lab</title>
+    <meta name="description" content="브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구" />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="application-name" content="JSON Lab" />
+    <link rel="canonical" href="https://ilestri.github.io/json-lab/" />
+    <link rel="icon" href="%BASE_URL%favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%BASE_URL%apple-touch-icon.png" />
+    <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="JSON Lab" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:title" content="JSON Formatter | JSON Lab" />
+    <meta property="og:description" content="브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구" />
+    <meta property="og:url" content="https://ilestri.github.io/json-lab/" />
+    <meta property="og:image" content="https://ilestri.github.io/json-lab/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="JSON Lab 미리보기 카드" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="JSON Formatter | JSON Lab" />
+    <meta name="twitter:description" content="브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구" />
+    <meta name="twitter:image" content="https://ilestri.github.io/json-lab/og-image.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "JSON Lab",
+        "applicationCategory": "DeveloperApplication",
+        "operatingSystem": "Web",
+        "url": "https://ilestri.github.io/json-lab/",
+        "description": "브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구",
+        "featureList": [
+          "JSON 포맷, 미니파이, 키 정렬",
+          "유효성 검사 및 오류 위치 표시",
+          "트리 뷰, 스키마 검증, JSON Diff, URL fetch"
+        ],
+        "browserRequirements": "HTML5; ECMAScript 2020",
+        "inLanguage": "ko"
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
