chore: SEO 키워드와 메타 정보 강화

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JSON Formatter | JSON Lab</title>
-    <meta name="description" content="브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구" />
+    <title>온라인 JSON 포맷터 · 뷰어 · 검증기 | JSON Lab</title>
+    <meta name="description" content="무료 온라인 JSON 포맷터/뷰어/검증기. 붙여넣기·업로드·트리 뷰·스키마 검증·Diff·URL fetch, 자동 포맷·Minify·키 정렬 지원." />
+    <meta
+      name="keywords"
+      content="온라인 JSON 포맷터, JSON Formatter, JSON 뷰어, JSON Viewer, JSON 검증, JSON Validator, JSON Minify, JSON 키 정렬, JSON Diff, JSON Schema, JSON 트리 뷰, Vue JSON 도구, JSON Lab"
+    />
     <meta name="robots" content="index,follow" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="application-name" content="JSON Lab" />
@@ -15,33 +19,52 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="JSON Lab" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:title" content="JSON Formatter | JSON Lab" />
-    <meta property="og:description" content="브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구" />
+    <meta property="og:title" content="온라인 JSON 포맷터 · 뷰어 · 검증기 | JSON Lab" />
+    <meta property="og:description" content="무료 온라인 JSON 포맷터/뷰어/검증기. 붙여넣기·업로드·트리 뷰·스키마 검증·Diff·URL fetch, 자동 포맷·Minify·키 정렬 지원." />
     <meta property="og:url" content="https://ilestri.github.io/json-lab/" />
     <meta property="og:image" content="https://ilestri.github.io/json-lab/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="JSON Lab 미리보기 카드" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="JSON Formatter | JSON Lab" />
-    <meta name="twitter:description" content="브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구" />
+    <meta name="twitter:title" content="온라인 JSON 포맷터 · 뷰어 · 검증기 | JSON Lab" />
+    <meta name="twitter:description" content="무료 온라인 JSON 포맷터/뷰어/검증기. 붙여넣기·업로드·트리 뷰·스키마 검증·Diff·URL fetch, 자동 포맷·Minify·키 정렬 지원." />
     <meta name="twitter:image" content="https://ilestri.github.io/json-lab/og-image.png" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "JSON Lab",
+        "alternateName": ["JSON Formatter", "JSON Viewer", "JSON Validator", "JSON Diff"],
         "applicationCategory": "DeveloperApplication",
+        "applicationSubCategory": "FormattingUtility",
         "operatingSystem": "Web",
         "url": "https://ilestri.github.io/json-lab/",
-        "description": "브라우저에서 JSON을 포맷/검증하고 트리/스키마/디프/URL fetch까지 지원하는 도구",
+        "description": "무료 온라인 JSON 포맷터/뷰어/검증기. 붙여넣기·업로드·트리 뷰·스키마 검증·Diff·URL fetch, 자동 포맷·Minify·키 정렬 지원.",
+        "keywords": [
+          "JSON formatter",
+          "JSON viewer",
+          "JSON validator",
+          "JSON minify",
+          "JSON diff",
+          "JSON schema",
+          "online JSON tool",
+          "Vue JSON formatter"
+        ],
         "featureList": [
           "JSON 포맷, 미니파이, 키 정렬",
           "유효성 검사 및 오류 위치 표시",
-          "트리 뷰, 스키마 검증, JSON Diff, URL fetch"
+          "트리 뷰, 스키마 검증, JSON Diff, URL fetch",
+          "자동 포맷, 최근 스니펫, 공유 링크"
         ],
         "browserRequirements": "HTML5; ECMAScript 2020",
-        "inLanguage": "ko"
+        "inLanguage": ["ko", "en"],
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "image": "https://ilestri.github.io/json-lab/og-image.png"
       }
     </script>
   </head>
