chore: add adsense script 추가

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <meta name="twitter:title" content="온라인 JSON 포맷터 · 뷰어 · 검증기 | JSON Lab" />
     <meta name="twitter:description" content="무료 온라인 JSON 포맷터/뷰어/검증기. 붙여넣기·업로드·트리 뷰·스키마 검증·Diff·URL fetch, 자동 포맷·Minify·키 정렬 지원." />
     <meta name="twitter:image" content="https://ilestri.github.io/json-lab/og-image.png" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2674441986368810"
+      crossorigin="anonymous"
+    ></script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
